--- a/D1_Tab_7_Getting_Help.Rmd
+++ b/D1_Tab_7_Getting_Help.Rmd
@@ -28,10 +28,47 @@ You can also press F1 while the cursor is on a function name to access the help 
 <br>
 
 <details open><summary class = 'drop'>Troubleshooting errors</summary>
-Great online resources to find answers to questions include <a href="https://stackexchange.com/">Stackexchange</a>, and <a href="https://stackoverflow.com//">Stackoverflow</a>. For tidyverse-related packages/questions, there's also really good documentation for each package and function <a href="https://tidyverse.tidyverse.org/"> here</a>. Google searches are usually my first step, and I include "in R" and the package name (if applicable) in every search related to R code.
+Great online resources to find answers to questions include <a href="https://stackexchange.com/">Stackexchange</a>, and <a href="https://stackoverflow.com//">Stackoverflow</a>. Google searches are usually my first step, and I include "in R" and the package name (if applicable) in every search related to R code. If you're troubleshooting an error message, copying and pasting the error message verbatim into a search engine often helps. 
 
-If you're troubleshooting an error message, copying and pasting the error message verbatim into a search engine often helps. 
-
-Don't hesitate to reach out to colleagues for help as well! If you are stuck on something and the answers on Google are more confusing than helpful, don't be afraid to ask a human. Every experienced R programmer was a beginner once, so chances are they've encountered the same problem as you at some point. There is an R-focused data science community of practice for I&M folks, which anyone working in R (regardless of experience!) is invited and encouraged to join. The Teams join code will be shared with course participants.
+Don't hesitate to reach out to colleagues for help as well! If you are stuck on something and the answers on Google are more confusing than helpful, don't be afraid to ask a human. Every experienced R programmer was a beginner once, so chances are they've encountered the same problem as you at some point. There is an R-focused <a href = "https://teams.microsoft.com/l/channel/19%3A114a351486924a7d92eca92dfe5235dd%40thread.tacv2/%5B%20%20%20%20Data%20Sci%20Community%20of%20Practice%20%5D?groupId=066491e4-d2ab-4a8a-931b-c96b970d24a8&tenantId=0693b5ba-4b18-4d7b-9341-f32f400a5494"> Data Science Community of Practice </a> for I&M folks, which anyone working in R (regardless of experience!) is invited and encouraged to join. 
 
 </details>
+
+<details open><summary class = 'drop'>Common errors and how to fix them</summary>
+<ol>
+<li><b>Unmatched parenthesis</b></li>
+```{r eval = F}
+mean_x <- mean(c(1, 3, 5, 7, 8, 21) # missing closing parentheses
+mean_x <- mean(c(1, 3, 5, 7, 8, 21)) # correct
+               
+```
+
+<li><b>Unmatched quotes</b></li>
+```{r eval = F}
+birds <- c("black-capped chickadee", "golden-crowned kinglet, "wood thrush",) # missing quote after kinglet
+```
+```{r eval = F}
+birds <- c("black-capped chickadee", "golden-crowned kinglet", "wood thrush") # corrected
+
+```
+
+<li><b>Missing a comma between elements</b></li>
+```{r eval = F}
+birds <- c("black-capped chickadee", "golden-crowned kinglet" "wood thrush") # missing comma after kinglet
+birds <- c("black-capped chickadee", "golden-crowned kinglet", "wood thrush") # corrected
+```
+
+<li><b>Misspelled function name</b></li>
+```{r eval = F}
+x_mean <- maen(x) # mispelled mean
+x_mean <- mean(x) # Corrected
+
+```
+</ol>
+
+Other resources that may help: 
+<ul>
+<li><a href = "https://www.r-bloggers.com/2023/02/top-10-errors-in-r-and-how-to-fix-them/">Top 10 errors in R and how to fix them blog</a></li>
+<li><a href = "https://bioinformatics.ccr.cancer.gov/docs/btep-coding-club/CC2023/Troubleshooting_Rprog/">Troubleshooting R</a></li>
+</ul>
+
