--- a/D1_Tab_5_Read_Write_Data.Rmd
+++ b/D1_Tab_5_Read_Write_Data.Rmd
@@ -6,11 +6,12 @@ output:
 ---
 
 #### Importing and saving data
-Most of the work we do in R relies on an existing dataset that we want to query or summarize, rather than creating our own datasets in R. Importing data is therefore an important skill to have in R. R can import most data types, including CSV and MS Excel files. You can also import tables from MS Access and SQL databases using ODBC drivers. That's beyond the scope of this class, but I can share examples for anyone needing to import from a database. 
+Most of the work we do in R relies on one or more existing datasets that we want to query or summarize, rather than creating our own in R. Importing data in R is therefore an important skill. R can import just about any data type, including CSV and MS Excel files. You can also import tables from MS Access and SQL databases using ODBC drivers. That's beyond the scope of this class, but I can share examples for anyone needing to import from a database. For now, I'll show how to work with CSVs and Excel spreadsheets. 
 
 <details open><summary class = "drop">Import CSV</summary>
-The read.csv function is used to bring in a dataset from a CSV file and stores the data in one of the fundamental data structures in R: a data frame. The `read.csv()` function takes the file path or url to the CSV as input and outputs a data frame containing the data from the CSV. Here we're going to read a CSV from a website. Then we're going to write that to disk in our project in a data folder.
+We use the `read.csv()` function to import CSVs in R. The `read.csv()` function takes the file path or url to the CSV as input and outputs a data frame containing the data from the CSV. Here we're going to read a CSV from a website, then save that in the data folder of our project.
 
+<p class = "code">Run the following line to import a teaching ACAD wetland dataset from the github repository for this training</p>
 ```{r read_csv}
 # read in the data from ACAD_wetland_data_clean.csv and assign it as a dataframe to the variable "ACAD_wetland"
 ACAD_wetland <- read.csv(
@@ -18,13 +19,13 @@ ACAD_wetland <- read.csv(
   )
 ```
 
-You can view the data in a separate window by running the `View()` function.
+<p class = "code">View the data in a separate window by running the `View()` function.</p>
 ```{r view_aw, eval = F}
 # View the ACAD_wetland data frame we just created
 View(ACAD_wetland)
 ```
 
-You can also just look at a few or last few records in your console. 
+<p class = "code">Or, check out the first few or last few records in your console.</p> 
 ```{r exp_dat}
 # Look at the top 6 rows of the data frame
 head(ACAD_wetland)
@@ -35,7 +36,7 @@ tail(ACAD_wetland)
 </details>
 <br>
 <details open><summary class = 'drop'>Save CSV</summary>
-Now we're going to write the csv to disk and show how to import from your computer. 
+<p class = "code">Now write the csv to disk and show how to import from your computer. </p>
 ```{r write_csv}
 # Create a data folder in your project
 dir.create("./data")
@@ -45,6 +46,8 @@ dir.create("./data")
 # like that, so I turn that off.
 write.csv(ACAD_wetland, "./data/ACAD_wetland_data_clean.csv", row.names = FALSE)
 ```
+
+<p class = "code">Make sure the writing to disk worked by importing the CSV from your computer</p>
 
 ```{r exploredat}
 # Read the data frame in using a relative path
@@ -60,21 +63,38 @@ We'll get very familiar with data frames in this class, but for the moment just 
 </details>
 
 <details open><summary class = 'drop'>Import from XLSX</summary>
-Base R does not have a way to import MS Excel files. The first step for working with Excel files (i.e., files with .xls or .xlsx extensions), therefore, is to install the `readxl` package to import Excel and `writexl` to write files to .xlsx, and then load the package as shown below. The `readxl` package has a couple of options for loading Excel spreadsheets, depending on whether the extension is .xls, .xlsx, or unknown. The code below shows you how to load files with .xlsx extension. The other options for loading Excel files can be viewed on the <a href="https://readxl.tidyverse.org/reference/read_excel.html">readxl help page</a>.
+Base R does not have a way to import MS Excel files. The first step for working with Excel files (i.e., files with .xls or .xlsx extensions), therefore, is to install the `readxl` package to import .xlsx files and `writexl` to write files to .xlsx. The `readxl` package has a couple of options for loading Excel spreadsheets, depending on whether the extension is .xls, .xlsx, or unknown, along with options to import different worksheets within a spreadsheet. 
+
+The code below installs the required packages, loads them, then first writes the ACAD_wetland CSV we just imported to an .xlsx. The last step imports the .xslx version of the ACAD wetland data. 
+
+<ol>
+<li class = "code">Install packages</li>
 ```{r, c19b, echo=T, eval=F}
 install.packages("readxl") # only need to run once. 
 install.packages("writexl")
 ```
 
-```{r, c19dd, echo=T, eval=F}
-library(readxl)
-ACAD_wetxls <- read_xlsx(path = "./data/ACAD_wetland_data_clean.xlsx", 
-                         sheet = "ACAD_wetland_data_clean")
-
-
+<li class = "code">Load packages</li>
+```{r libxl}
+library(writexl) # saving xlsx
+library(readxl) # importing xlsx
 ```
+
+<li class = "code">Write CSV to .xlsx to data folder. Doing it this way to keep this training stand-alone.</li>
+```{r writexl}
+write_xlsx(ACAD_wetland, "./data/ACAD_wetland_data_clean.xlsx")
+```
+
+<li class = "code">Import spreadsheet. Note that the default settings import the first sheet, so I didn't really 
+need to specify the sheet below. I included the sheet argument to show how it's done.</li>
+```{r, c19dd, echo=T}
+ACAD_wetxls <- read_xlsx(path = "./data/ACAD_wetland_data_clean.xlsx", sheet = "Sheet1") 
+```
+
+<li class = "code">View top 6 rows to check the data</li>
 ```{r, c19e, echo=T}
-head(bat_capture)
+head(ACAD_wetxls)
 ```
+</ol>
 </details>
 <br>
