--- a/D1_Tab_8_Getting_Help.Rmd
+++ b/D1_Tab_8_Getting_Help.Rmd
@@ -9,6 +9,7 @@ output:
 <details open><summary class = 'drop'>Help Documentation</summary>
 There are a number of options to get help with R. If you're trying to figure out how to use a function, you can type ?function_name. For example `?plot` will show the R documentation for that function in the Help panel.
 
+<p class = 'code'>Get help for the functions below</p>
 ```{r, c4, echo=T, eval=F}
 ?plot
 ?dplyr::filter
@@ -19,7 +20,7 @@ You can also press F1 while the cursor is on a function name to access the help 
 <li>Top left shows the function with the {package}. Base means it's a function in the base R install.</li>
 <li><b>Description:</b> tell you what the function is. </li>
 <li><b>Usage:</b> tells you what the arguments are. The "..." means there are other potential arguments, but isn't something we need to talk about right now. </li>
-<li><b>Arguments:</b> define the arguements and what their inputs take. For example, if an arguement is TRUE or FALSE, or a text string. </li>
+<li><b>Arguments:</b> define the arguments and what their inputs take. For example, if an arguement is TRUE or FALSE, or a text string. </li>
 <li><b>Value</b>: Describes more about the function (not always included) </li>
 <li><b>See Also: </b>Sometimes functions build on other functions. This section links to similar or building block functions. </li>
 <li><b>Examples: </b>Functions that provide good examples are invaluable. Sometimes these are afterthoughts or not included in help documentation, which is too bad. Unfortunately, base R functions tend to have some of the most obscure, hard to understand examples.</li>
@@ -36,14 +37,14 @@ Don't hesitate to reach out to colleagues for help as well! If you are stuck on 
 
 <details open><summary class = 'drop'>Common errors and how to fix them</summary>
 <ol>
-<li><b>Unmatched parenthesis</b></li>
+<li><p class = "code>Unmatched parenthesis</p></li>
 ```{r eval = F}
 mean_x <- mean(c(1, 3, 5, 7, 8, 21) # missing closing parentheses
 mean_x <- mean(c(1, 3, 5, 7, 8, 21)) # correct
                
 ```
 
-<li><b>Unmatched quotes</b></li>
+<li><p class = "code>Unmatched quotes</p></li>
 ```{r eval = F}
 birds <- c("black-capped chickadee", "golden-crowned kinglet, "wood thrush",) # missing quote after kinglet
 ```
@@ -52,13 +53,13 @@ birds <- c("black-capped chickadee", "golden-crowned kinglet", "wood thrush") # 
 
 ```
 
-<li><b>Missing a comma between elements</b></li>
+<li><p class = "code>Missing a comma between elements</p></li>
 ```{r eval = F}
 birds <- c("black-capped chickadee", "golden-crowned kinglet" "wood thrush") # missing comma after kinglet
 birds <- c("black-capped chickadee", "golden-crowned kinglet", "wood thrush") # corrected
 ```
 
-<li><b>Misspelled function name</b></li>
+<li><p class = "code>Misspelled function name</p></li>
 ```{r eval = F}
 x_mean <- maen(x) # mispelled mean
 x_mean <- mean(x) # Corrected
