--- a/index.Rmd
+++ b/index.Rmd
@@ -46,15 +46,16 @@ body {
 ```{r read_write, child = "D1_Tab_5_Read_Write_Data.Rmd"}
 ```
 
-```{r read_write, child = "D1_Tab_6_Data_structures_and_exploration.Rmd"}
+```{r datastr, child = "D1_Tab_6_Data_structures.Rmd"}
 ```
 
-```{r read_write, child = "D1_Tab_7_Getting_Help.Rmd"}
+```{r basplot, child = "D1_Tab_7_Data_Exploration_and_Basic_Plotting.Rmd"}
 ```
 
-- Basic plotting
+```{r help, child = "D1_Tab_8_Getting_Help.Rmd"}
+```
 
-```{r read_write, child = "D1_Tab_9_Keyboard_Shortcuts.Rmd"}
+```{r keyshorts, child = "D1_Tab_9_Keyboard_Shortcuts.Rmd"}
 ```
 
 
