--- a/D1_Tab_0_Goals.Rmd
+++ b/D1_Tab_0_Goals.Rmd
@@ -6,7 +6,7 @@ output:
 ---
 
 #### Day 1 Goals
-Overall goals for the first day are: 
+<b>Overall goals for the first day are: </b>
 
 1. Get comfortable navigating RStudio IDE, such as opening a new project or script, running code and viewing the output, etc. 
 2. Ability to import and save CSV and .xlsx files.
@@ -14,3 +14,8 @@ Overall goals for the first day are:
 4. Ability to explore data frames, such as the number of columns, min/max of different columns, data type of column, basic plotting, etc. 
 5. Basic understanding of square brackets to view and filter data[,]. This is probably the hardest concept you'll learn this week. The next two days I will show you easier ways to work with your data that don't involve brackets.
 6. Able to access help within and outside of R.
+
+<img src = "./images/R_journey.png" alt = 'R journey' style = "display:block;margin-left:auto;margin-right:auto;width:450px;">
+<center style = "font-size:11px;font-family:'Arial',sans-serif;"><a href="https://allisonhorst.com">Artwork by @allison_horst</a></center>
+</details>
+<break>
