--- a/D1_Tab_6_Data_structures.Rmd
+++ b/D1_Tab_6_Data_structures.Rmd
@@ -109,25 +109,24 @@ ncol(ACAD_wetland) # second dim
 <p class = 'code'>Return first 5 rows of the data frame</p>
 ```{r rows}
 ACAD_wetland[1:5,]
-ACAD_wetland[c(1, 2, 3, 4, 5)] #equivalent but more typing
+ACAD_wetland[c(1, 2, 3, 4, 5),] #equivalent but more typing
 ```
 
 <p class = 'code'>Return first 5 rows and a subset of columns of the data frame</p>
 ```{r rowscols}
 ACAD_wetland[1:5, c("Site_Name", "Latin_Name", "Common", "Year", "PctFreq")]
 ```
-
+<br>
 <div class="alert alert-info">
 <strong>CHALLENGE: How would you look at the the first 4 even rows (2, 4, 6, 8)?</strong>
-</div>
 
 <details><summary class='drop2'>Answer</summary>
 ```{r chal1}
 ACAD_wetland[c(2, 4, 6, 8),]
 ```
-
 </details>
-
+</div>
+<br>
 You can specify columns by name or by index (integer indicating position of column). It's almost always best to refer to columns by name when possible because it makes your code easier to read and prevents your code from breaking if columns get reordered. But, in case you come across code with numbers in the column part of the brackets, here's what it looks like. Note the empty space to the left of the comma. That means you want all rows, but only the first 4 columns. 
 
 <p class = 'code'>Return all rows and first 4 columns of the data frame</p>
@@ -156,10 +155,26 @@ ACAD_wetland[ACAD_wetland$Invasive == TRUE, "Latin_Name"] # equivalent
 ```
 
 <p class = 'code'>Return only unique species sorted alphabetically.</p>
-```{r rows2}
+```{r rows2a, results = "hide"}
 sort(unique(ACAD_wetland[, "Latin_Name"]))
+```
+<br>
+
+<div class="toggle"><button>View output Option 1</button>
+```{r rows2, echo = F}
+sort(unique(ACAD_wetland[, "Latin_Name"]))
+```
+</div>
+<br>
+
+```{r rows2b1, results = "hide"}
 sort(unique(ACAD_wetland$Latin_Name)) # equivalent
 ```
 
+<div class="toggle"><button>View output Option 2</button>
+```{r rows2b, echo = F}
+sort(unique(ACAD_wetland$Latin_Name)) # equivalent
+```
+</div>
 </details>
 
